minor language changes and add reference to sha-256

--- a/final-submission/references.bib
+++ b/final-submission/references.bib
@@ -185,3 +185,10 @@
 	urldate = {2017-10-23},
 	howpublished={\url{https://web.archive.org/web/20141208222542/http://storageeffect.media.seagate.com/2014/07/storage-effect/2016-the-year-of-the-zettabyte/}},
 }
+@ONLINE{sha-256,
+	author = {{Eastlake, Hansen, et al.}},
+	title = {{RFC 6234} - SHAs, HMAC-SHAs, and HKDF},
+	year = 2011,
+	urldate = {2017-10-23},
+	howpublished={\url{https://tools.ietf.org/html/rfc6234}},
+}
