--- a/final-submission/final-submission.tex
+++ b/final-submission/final-submission.tex
@@ -167,16 +167,11 @@ We would like to thank our advisor, Prof.Dr. Farhad Mehta, for his continuous su
 \listoftables % Prints the list of tables
 
 %----------------------------------------------------------------------------------------
-%	ABBREVIATIONS
+%	GLOSSARY
 %----------------------------------------------------------------------------------------
 
-\begin{abbreviations}{ll} % Include a list of abbreviations (a table of two columns)
-
-%\textbf{LAH} & \textbf{L}ist \textbf{A}bbreviations \textbf{H}ere\\
-%\textbf{WSF} & \textbf{W}hat (it) \textbf{S}tands \textbf{F}or\\
-\printglossary
 \glsaddall
-\end{abbreviations}
+\printglossary
 
 
 %----------------------------------------------------------------------------------------
