Fix broken glossary references

--- a/final-submission/glossar.tex
+++ b/final-submission/glossar.tex
@@ -11,7 +11,7 @@
 \newglossaryentry{node}
 {
     name={node},
-    description={An core participant in the system that manages \gls{Chunks} (See \fullref{sec:component-node})}
+    description={An core participant in the system that manages \gls{chunk} (See \fullref{sec:component-node})}
 }
 \newglossaryentry{designated-node}
 {
@@ -87,7 +87,7 @@
 \newglossaryentry{chunk-table}
 {
     name={chunk table},
-    description={A data structure on a \gls{node} containing all \gls{chunk-identifiers} and \glspl{expiration-date} of all \glspl{chunk} stored on this \gls{node}.}
+    description={A data structure on a \gls{node} containing all \gls{chunk-identifier} and \glspl{expiration-date} of all \glspl{chunk} stored on this \gls{node}.}
 }
 \newglossaryentry{file}
 {
@@ -155,6 +155,6 @@
 \newglossaryentry{header-field}
 {
     name={header field},
-    description={Components of the \gls{message-header} section of \glspl{messages} that define operating parameters}
+    description={Components of the \gls{message-header} section of \glspl{message} that define operating parameters}
 }
 
