Remove Pagenumbers from glossary

--- a/latex_template.tex
+++ b/latex_template.tex
@@ -51,7 +51,7 @@ consistentlayout, % Uncomment to change the layout of the declaration, abstract 
 %	Glossary SETTINGS
 %----------------------------------------------------------------------------------------
 \usepackage{hyperref}
-\usepackage[toc,nopostdot]{glossaries}%acronym
+\usepackage[toc,nopostdot, nonumberlist]{glossaries}%acronym
 \setglossarystyle{altlist}
 \usepackage{xparse}
 \DeclareDocumentCommand{\newdualentry}{ O{} O{} m m m m } {
