--- a/final-submission/glossar.tex
+++ b/final-submission/glossar.tex
@@ -11,7 +11,7 @@
 \newglossaryentry{node}
 {
     name={node},
-    description={An core participant in the system that manages \gls{chunk} (See \fullref{sec:component-node})}
+    description={A core participant in the system that manages \glspl{chunk} (See \fullref{sec:component-node})}
 }
 \newglossaryentry{designated-node}
 {
@@ -46,22 +46,22 @@
 \newglossaryentry{metadata}
 {
     name={metadata},
-    description={A set of data that describes a node (e.g. its state, storage capacity). The set of data differs depending on the context.}
+    description={A set of data that describes a \gls{node} (e.g. its state, storage capacity). The set of data differs depending on the context.}
 }
 \newglossaryentry{storage}
 {
     name={storage},
-    description={A component in charge to persist data (See \fullref{sec:component-storage})}
+    description={A component in charge to persist data (see \fullref{sec:component-storage}).}
 }
 \newglossaryentry{serialised-chunk-index}
 {
     name={serialised chunk index},
-    description={A serialised version of the chunk index, that might be spit into multiple chunks, created on backup and used for restore.}
+    description={A serialised version of the \gls{chunk-index}, that might be split into multiple chunks, created on backup and used for restore.}
 }
 \newglossaryentry{chunk-content}
 {
     name={chunk content},
-    description={The actual binary data a chunk represents}
+    description={The actual binary data a chunk represents.}
 }
 \newglossaryentry{chunk}
 {
@@ -71,7 +71,7 @@
 \newglossaryentry{root-handle}
 {
     name={root handle},
-    description={A chunk, that is highlighted to find backups in the system.}
+    description={A chunk that is highlighted to find backups in the system.}
 }
 
 \newglossaryentry{chunk-identifier}
@@ -92,69 +92,69 @@
 \newglossaryentry{file}
 {
     name={file},
-    description={A document on a client system that shall be backed up}
+    description={A document on a client system that shall be backed up.}
 }
 \newglossaryentry{expiration-date}
 {
     name={expiration date},
-    description={Date, until which a given \gls{chunk} must be kept in the system}
+    description={Date, until which a given \gls{chunk} must be kept in the system.}
 }
 
 \newglossaryentry{client}
 {
     name={client},
-    description={An piece of software that runs on a users computer that is in charge of creating and restoring backups (See \fullref{sec:component-client})}
+    description={A piece of software which runs on a users computer, that is in charge of creating and restoring backups (see \fullref{sec:component-client}).}
 }
 
 \newglossaryentry{management}
 {
     name={management},
-    description={An Component that orchestrates the configuration of the system (See \fullref{sec:component-management})}
+    description={A component that orchestrates the configuration of the system (see \fullref{sec:component-management}).}
 }
 
 \newglossaryentry{system}
 {
     name={system},
-    description={The whole redbackup system as described in \fullref{sec:specification}}
+    description={The whole redbackup system as described in \fullref{sec:specification}.}
 }
 
 \newglossaryentry{node-cache}
 {
     name={node-cache},
-    description={A list of contact information of nodes in the system that each client maintains in case the management is unavailable}
+    description={A list of contact information of nodes in the system that each client maintains in case the management is unavailable.}
 }
 
 \newglossaryentry{node-state}
 {
     name={node state},
-    description={The intrinsic or extrinsic state of any node (See \fullref{sec:component-node})}
+    description={The intrinsic or extrinsic state of any node (see \fullref{sec:component-node}).}
 }
 
 \newglossaryentry{medium}
 {
     name={medium},
-    description={Particular form of storage for files, e.g. hard discs or magnetic tape}
+    description={Particular form of storage for files, e.g. hard discs or magnetic tape.}
 }
 
 \newglossaryentry{message}
 {
     name={message},
-    description={A unit of communication between two parties}
+    description={A unit of communication between two parties.}
 }
 
 \newglossaryentry{message-payload}
 {
     name={message payload},
-    description={Actual data of a message}
+    description={Actual data of a \gls{message}.}
 }
 \newglossaryentry{message-header}
 {
     name={message header},
-    description={Meta information describing the message}
+    description={Meta-information describing the \gls{message}}
 }
 \newglossaryentry{header-field}
 {
     name={header field},
-    description={Components of the \gls{message-header} section of \glspl{message} that define operating parameters}
+    description={Components of the \gls{message-header} section of \glspl{message} that define operating parameters.}
 }
 
