Implement reasonable changes suggested by MeF for morphological box

--- a/final-submission/appendices/morphological_box.tex
+++ b/final-submission/appendices/morphological_box.tex
@@ -101,4 +101,4 @@ Assuming we have $p=30^{21}$ files/chunks the system (which is equivalent to two
 
 If, however, a collision would happen after all, for example, if the used cryptographic hash function is flawed or the unlikely event occurs, it results in data loss.
 
-As for the study project, we use the SHA-256 algorithm\cite{sha-256} and neglect the risk of hash collisions due to its low probability. Nonetheless, we prepare all protocols and components to use an interchangeable mechanism for the calculation and transmission of the identifiers.
+As for the study project, we use the SHA-256 algorithm\cite{sha-256} and neglect the risk of hash collisions due to its low probability. Nonetheless, we prepare all protocols and components to use an interchangeable mechanism for the calculation and transmission of file/chunk identifiers.
