Implement reasonable changes suggested by MeF for language evaluation

--- a/final-submission/appendices/language-evaluation.tex
+++ b/final-submission/appendices/language-evaluation.tex
@@ -3,9 +3,9 @@
 
 Based on the Requirements described in Appendix \ref{requirements}, we compared three languages/technologies.
 
-We heard of \textbf{Rust} as being a modern language as an alternative to the traditional ''low-level'' languages C and C++.
+\textbf{Rust} is a modern language as an alternative to the traditional ''low-level'' languages C and C++.
 
-\textbf{Erlang} was the second candidate of which we heard that it is well suited for distributed, fault-tolerant systems. It is also a functional programming language, with which we both do not have much experience but share an interest in it.
+\textbf{Erlang} was the second candidate that it is well suited for distributed, fault-tolerant systems. It is also a functional programming language, with which we both do not have much experience but share an interest in it.
 
 \textbf{Go} came up when researching for distributed systems in Rust. Friends, as well as various blog posts, suggested Go is established in the field of distributed systems, has a diverse eco-system and is therefore well suited for the job.
 
