--- a/final-submission/appendices/testing.tex
+++ b/final-submission/appendices/testing.tex
@@ -32,7 +32,7 @@ These two, rather small nework styles will probably be the most commonly used de
 
 On these two networks, the implemented scenarios as defined in Appendix \ref{sec:scenarios} are tested (if applicable).
 
-The integration tests are to be run on every tagged release (i.e. at least once every sprint).
+The integration tests are to be run automatically at least on every tagged release (i.e. at least once every sprint).
 
 \subsubsection{Implementation}
 
