--- a/final-submission/appendices/architecture.tex
+++ b/final-submission/appendices/architecture.tex
@@ -43,7 +43,7 @@ An \gls{administrator} wants to interact with the \gls{system} as less as possib
 \begin{figure}[h]
     \centering
     \includegraphics[width=1\linewidth]{resources/client_domain_model}
-    \caption[Client Domain Model]{Domain Model illustrating the \glspl{client} perspective}
+    \caption[Client Subdomain]{Subdomain illustrating the \glspl{client} perspective}
 \end{figure}
 
 \begin{itemize}
@@ -84,7 +84,7 @@ An \gls{administrator} wants to interact with the \gls{system} as less as possib
 \begin{figure}[h]
     \centering
     \includegraphics[width=1\linewidth]{resources/node_domain_model}
-    \caption[Node Domain Model]{Domain Model illustrating the \glspl{node} perspective}
+    \caption[Node Subdomain]{Subdomain illustrating the \glspl{node} perspective}
 \end{figure}
 
 \begin{itemize}
@@ -138,7 +138,7 @@ An \gls{administrator} wants to interact with the \gls{system} as less as possib
 \begin{figure}[h]
     \centering
     \includegraphics[width=1\linewidth]{resources/storage_domain_model}
-    \caption[Storage Domain Model]{Domain Model illustrating the \gls{storage}s perspective}
+    \caption[Storage Subdomain]{Subdomain illustrating the \gls{storage}s perspective}
 \end{figure}
 
 \begin{itemize}
@@ -164,7 +164,7 @@ An \gls{administrator} wants to interact with the \gls{system} as less as possib
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.75\linewidth]{resources/management_domain_model}
-    \caption[Management Domain Model]{Domain Model illustrating the \gls{management}'s perspective}
+    \caption[Management Subdomain]{Subdomain illustrating the \gls{management}'s perspective}
 \end{figure}
 \begin{itemize}
     \item The \gls{administrator} is the only Actor interacting with the \gls{management}. He/She sends instructions (e.g. add new \gls{node}) and is notified by the \gls{management} about any anomalies.
