Highlight relevant issues in the requirements

--- a/final-submission/appendices/requirements.tex
+++ b/final-submission/appendices/requirements.tex
@@ -128,8 +128,8 @@ The following requirements are grouped according to ISO 9126 \cite{ISO9126}.
 \subsubsection{Functionality}
 
 \begin{enumerate}
-	\item \relevantreq{{A node must guarantee when asked about files stored on it that all concerned files exist on it and are not corrupted} (accuracy)
-	\item \relevantreq{A given node must only know the minimal amount of data required to detect corrupted data and garbage collection, i.e. the encrypted binary data, an identifier that can be derived from the encrypted binary data as well as the expiration date.} (security)
+	\item \relevantreq{A node must guarantee when asked about files stored on it that all concerned files exist on it and are not corrupted} (accuracy)
+	\item \relevantreq{A given node must only know the minimal amount of data required to detect corrupted data and garbage collection, i.e. the (encrypted) binary data, an identifier that can be derived from the encrypted binary data as well as the expiration date.} (security)
 	\item An administrator must be able to grant new users access to the backup system within less than 10 minutes. (suitability)
 	\item An administrator must be able to see how much capacity in GB a given user is using within less than 1 minute. (suitability)
 	\item All data sent from a user must be encrypted according to BSI TR-02102-1 \cite{bsi-tr-02102-1} (security)
