Break final sumbission document structure down in detail

--- a/final-submission/final-submission.tex
+++ b/final-submission/final-submission.tex
@@ -82,16 +82,30 @@
 
 \begin{abstract}
 \addchaptertocentry{\abstractname} % Add the abstract to the table of contents
-\begin{itemize}
-	\item Main Idea
-	\item Brief description of what is done
-	\item  Brief description of the results
-	\item  Remember: Abstract = decision aid.
-	\item  No References
-	\item  Present Tense
-	\item  See HSR-Module RKI
-	\item  See Chapter 2.3 in \url{https://wiki.hsr.ch/FarhadMehta/files/Writing_Scientific_Papers.pdf}
-\end{itemize}
+
+
+\section*{Motivation} % Auch Ausgangslage
+
+\section*{Goals / Approach / Technology}
+
+\section*{Results}
+
+% Hints for writing the abstract:
+% 
+% - Abstract = decision aid.
+% - No References allowed!
+% - Written in present Tense
+% - discuss the main Idea
+% - Brief description of what is done
+% - Brief description of the results
+% - Aus HSR-Modul RKI:
+%   - 100-200 Wörter
+%   - Ist in sich geschlossene und aussagekräftige Zusammenfassung
+%   - Enthält die Schlüsselbegriffe
+%   - Eigenständiger Text
+%   - Für SA: Informierende Abstracts, also Thema, Problem, Ziele, Vorgehen, Ergebnisse
+% - Siehe auch: Chapter 2.3 in https://wiki.hsr.ch/FarhadMehta/files/Writing_Scientific_Papers.pdf
+
 \end{abstract}
 
 %----------------------------------------------------------------------------------------
@@ -101,6 +115,7 @@
 \chapter{Management Summary}
 \addchaptertocentry{\abstractname} % Add the abstract to the table of contents
 \emph{The Thesis Management is written here (and usually kept to just this page).}
+% TODO: Unteschied zu Abstract?
 
 %----------------------------------------------------------------------------------------
 %	ACKNOWLEDGEMENTS
@@ -110,10 +125,6 @@
 \addchaptertocentry{\acknowledgementname} % Add the acknowledgements to the table of contents
 We would like to thank our advisor, Prof.Dr. Farhad Mehta, for his continuous support.
 
-\begin{itemize}
-	\item we might want to use author-date citations over plain numbering.
-	\item Acknowledge HSR and reviewers...
-\end{itemize}
 \end{acknowledgements}
 
 %----------------------------------------------------------------------------------------
